simplex logo fixed

--- a/src/pages/buy-crypto/crypto-offers/crypto-offers.scss
+++ b/src/pages/buy-crypto/crypto-offers/crypto-offers.scss
@@ -44,7 +44,7 @@ page-crypto-offers {
       margin-top: 15px;
 
       img {
-        vertical-align: text-bottom;
+        vertical-align: middle;
         height: 20px;
       }
     }
