--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -1312,7 +1312,8 @@
       background-color: $bg-color-dark-theme;
     }
   }
-  page-simplex {
+  page-simplex,
+  page-wyre {
     .buy-crypto-button {
       color: $text-color-dark-theme;
     }
