--- a/src/pages/buy-crypto/crypto-settings/crypto-settings.scss
+++ b/src/pages/buy-crypto/crypto-settings/crypto-settings.scss
@@ -1,45 +1,14 @@
 page-crypto-settings {
-  ion-label,
-  .item-title {
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
-    box-orient: vertical;
-    -webkit-box-orient: vertical;
-  }
-
-  .buy-crypto-button {
-    font-size: 16px;
-    background: none;
-    ion-icon {
-      vertical-align: text-bottom;
-      margin-left: 3px;
+  .bp-list {
+    ion-icon.item-img.icon,
+    ion-note ion-icon.item-img.icon {
+      &.icon-md.item-icon,
+      &.icon-ios.item-icon {
+        img {
+          width: auto;
+          height: 25px;
+        }
+      }
     }
-  }
-  .simplex-problems {
-    padding: 20px;
-    text-align: center;
-    white-space: normal;
-    font-size: 12.5px;
-  }
-  .status,
-  .date {
-    font-size: 12.5px;
-  }
-  .form-container {
-    text-align: left;
-    width: 100%;
-  }
-  ion-spinner {
-    * {
-      stroke: #0d172c !important;
-    }
-  }
-  .simplex-logo {
-    display: flex;
-    margin: 0 auto;
   }
 }
